--- a/packages/savior-server/docker-compose.yaml
+++ b/packages/savior-server/docker-compose.yaml
@@ -8,7 +8,7 @@ services:
   graphql-engine:
     image: hasura/graphql-engine:v1.0.0-beta.9
     ports:
-      - '8080:8080'
+      - '8090:8080'
     depends_on:
       - 'postgres'
     restart: always
@@ -20,5 +20,6 @@ services:
       # uncomment for enabling jwt,
       # see https://docs.hasura.io/1.0/graphql/manual/guides/integrations/auth0-jwt.html#configure-hasura-to-use-auth0-keys
       HASURA_GRAPHQL_JWT_SECRET: ${HASURA_GRAPHQL_JWT_SECRET}
+      HASURA_GRAPHQL_ENABLE_TELEMETRY: 'false'
 volumes:
   db_data:
