--- a/packages/hasura-server/docker-compose.yaml
+++ b/packages/hasura-server/docker-compose.yaml
@@ -20,5 +20,6 @@ services:
       # uncomment for enabling jwt,
       # see https://docs.hasura.io/1.0/graphql/manual/guides/integrations/auth0-jwt.html#configure-hasura-to-use-auth0-keys
       HASURA_GRAPHQL_JWT_SECRET: ${HASURA_GRAPHQL_JWT_SECRET}
+      HASURA_GRAPHQL_UNAUTHORIZED_ROLE: 'anonymous'
 volumes:
   db_data:
